Trying to fix map display on mobile

--- a/edgeledger/css/mobile.css
+++ b/edgeledger/css/mobile.css
@@ -1,3 +1,12 @@
+@viewport {
+  width: device-width;
+  zoom: 1;
+}
+
+@-ms-viewport {
+  width: device-width;
+}
+
 #what .items {
   display: block;
   padding: 1rem;
