--- a/edgeledger/css/widescreen.css
+++ b/edgeledger/css/widescreen.css
@@ -1,3 +1,12 @@
+@viewport {
+  width: device-width;
+  zoom: 1;
+}
+
+@-ms-viewport {
+  width: device-width;
+}
+
 /* Align icon to left */
 #what .items .item {
   display: flex;
